--- a/front/package.json
+++ b/front/package.json
@@ -6,10 +6,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "dotenv": "^6.1.0",
+    "jquery": "^3.3.1",
+    "mdbreact": "^4.9.0",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
+    "popper.js": "^1.14.7",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
